# career-tracker

./: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  start.sh
app/: main.py  settings.py  telegram_application.py
app/core/: markdown.py
app/core/admin/: auth.py
app/core/db/: alembic.ini  base.py
app/core/db/migrations/: env.py
app/core/db/migrations/versions/: 053eca62a931_.py  109e0089e2b1_.py  4330a5ddd915_.py  5ded53ffce20_.py  a0e6c2f03681_.py  e5fa58613132_.py  efc2663bc435_.py  f2e155841e1d_.py  f65ea8f8375e_.py
app/services/admin/: attendance.py  config.py  event.py  group.py  product.py  purchase.py  user.py
app/services/admin/views/: attendance.py  event_list.py  group.py  group_list.py  product.py  purchase.py  user.py
app/services/bot/: config.py  events.py  me.py  products.py  start.py
app/services/bot/models/: __init__.py  chat.py  event.py  group.py  product.py  purchase.py  user.py  users_groups.py
app/services/bot/views/: common.py  events.py  me.py  products.py  start.py
static/: table.css
templates/attendance/: event_select.html.jinja  group.html.jinja
templates/user/: create.html.jinja  edit.html.jinja
